Fix category names spacing in ML

--- a/assets/css/components/ModuleLibrary.scss
+++ b/assets/css/components/ModuleLibrary.scss
@@ -325,7 +325,7 @@
           color:$brand-text--dark;
 
           .category-name {
-            margin-left: 1rem;
+            margin-left: 1.5rem;
           }
         }
       }
